# open_manipulator_pro_gazebo

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: simulation.launch.py
objects/: grasp_box.urdf  grasp_box_anti_colide.urdf
worlds/: wall_objects_done2.world
