<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_pro_gazebo</name>
  <version>0.0.0</version>
  <description>Simulation of openMANIPULATOR-P on Gazebo</description>
  <maintainer email="mateusmenezes95@gmail.com">Mateus Meneses</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>open_manipulator_pro_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_m0del_path = "${prefix}/../../../open_manipulator_pro_description/share/"/>  
  </export>
</package>
